--- a/Whispers_of_Motherhood_AI_for_Postpartum_Healing"_🤱💙.ipynb
+++ b/Whispers_of_Motherhood_AI_for_Postpartum_Healing"_🤱💙.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1hv1yuKO_Ec8PWR0x1nxZCnvntZ5DjdR3",
-      "authorship_tag": "ABX9TyPKgXfC8vQnNFRdnya0xbgd",
+      "authorship_tag": "ABX9TyNN/W7vWro6OECZSLogJsL5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1740,7 +1740,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Annapoornaaradhya/Whispers_of_Motherhood_AI_for_Postpartum_Healing_-/blob/main/Whispers_of_Motherhood_AI_for_Postpartum_Healing%22_%F0%9F%A4%B1%F0%9F%92%99.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Annapoornaaradhya/Whispers_of_Motherhood/blob/main/Whispers_of_Motherhood_AI_for_Postpartum_Healing%22_%F0%9F%A4%B1%F0%9F%92%99.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1812,7 +1812,7 @@
         "id": "qAYVsw1FItZA",
         "outputId": "a7df2ea6-c92f-48ac-c3ba-46f6a77bb003"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1960,7 +1960,7 @@
         "id": "fEA9fe78KFCm",
         "outputId": "15a5a38a-a674-46a6-af19-bc2c13b02a76"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2021,7 +2021,7 @@
         "id": "62OlMz43K2F0",
         "outputId": "f1c8690f-ce8c-470d-facc-8fee9370798a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2077,7 +2077,7 @@
         "id": "UxOdvin7Lfaa",
         "outputId": "e42c9492-9d19-45ed-edd5-741c39cb2fef"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2126,7 +2126,7 @@
         "id": "5tfScaaENaUn",
         "outputId": "1ee5ec85-2a04-43c6-b021-53e486b048cb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2204,7 +2204,7 @@
         "id": "cobPvacjNmSG",
         "outputId": "da9ffbf4-d1b5-4934-9f4a-b565d8b0ebbb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2454,7 +2454,7 @@
         "id": "XYjNTSMZOWgm",
         "outputId": "d4e0b4dc-c86f-4703-fd38-f18d1b86fdcc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2686,7 +2686,7 @@
         "id": "uR25V2sDPPCL",
         "outputId": "1877d30c-50d8-4e37-f127-c41c7cd7984c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2801,7 +2801,7 @@
         "id": "J755o_OxT4n_",
         "outputId": "42712367-adda-45b8-e04c-ce2817d52654"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2940,7 +2940,7 @@
         "id": "sGZ3sCOQUwml",
         "outputId": "13319b3e-bd8a-4abf-f79b-bff8883ad350"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3450,9 +3450,48 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "import numpy as np\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# Example training data (Replace with real data)\n",
+        "X_train = np.array([[6, 8, 7], [5, 6, 4], [2, 3, 2], [7, 9, 8], [1, 2, 1]])\n",
+        "y_train = np.array([0, 1, 2, 0, 2])  # Labels: 0 = Low, 1 = Moderate, 2 = High\n",
+        "\n",
+        "# Train a simple model\n",
+        "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Save the trained model properly\n",
+        "with open(\"/content/drive/MyDrive/Whispers of Motherhood/postpartum_health_model.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(model, f)\n",
+        "\n",
+        "print(\"✅ Model trained and saved successfully!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i7OK7DwhQfAZ",
+        "outputId": "72c1a73f-f5c1-4937-f409-2f46018b7e52"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Model trained and saved successfully!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-dDwHRVzXhHv"
+        "id": "q5s_b-JJQfrr"
       },
       "execution_count": null,
       "outputs": []
