Updated using Colab

--- a/Whispers_of_Motherhood_AI_for_Postpartum_Healing"_🤱💙.ipynb
+++ b/Whispers_of_Motherhood_AI_for_Postpartum_Healing"_🤱💙.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1hv1yuKO_Ec8PWR0x1nxZCnvntZ5DjdR3",
-      "authorship_tag": "ABX9TyNN/W7vWro6OECZSLogJsL5",
+      "authorship_tag": "ABX9TyN18+vB/zgJbFkFQ/ERhGZ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2728,6 +2728,54 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Train Health Model**"
+      ],
+      "metadata": {
+        "id": "SQIL37RISKTe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "import numpy as np\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# Example training data (Replace with real data)\n",
+        "X_train = np.array([[6, 8, 7], [5, 6, 4], [2, 3, 2], [7, 9, 8], [1, 2, 1]])\n",
+        "y_train = np.array([0, 1, 2, 0, 2])  # Labels: 0 = Low, 1 = Moderate, 2 = High\n",
+        "\n",
+        "# Train a simple model\n",
+        "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Save the trained model properly\n",
+        "with open(\"/content/drive/MyDrive/Whispers of Motherhood/postpartum_health_model.pkl\", \"wb\") as f:\n",
+        "    pickle.dump(model, f)\n",
+        "\n",
+        "print(\"✅ Model trained and saved successfully!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i7OK7DwhQfAZ",
+        "outputId": "72c1a73f-f5c1-4937-f409-2f46018b7e52"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Model trained and saved successfully!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Model Evaluation**"
       ],
       "metadata": {
@@ -3447,54 +3495,6 @@
           "execution_count": 15
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pickle\n",
-        "import numpy as np\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "\n",
-        "# Example training data (Replace with real data)\n",
-        "X_train = np.array([[6, 8, 7], [5, 6, 4], [2, 3, 2], [7, 9, 8], [1, 2, 1]])\n",
-        "y_train = np.array([0, 1, 2, 0, 2])  # Labels: 0 = Low, 1 = Moderate, 2 = High\n",
-        "\n",
-        "# Train a simple model\n",
-        "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-        "model.fit(X_train, y_train)\n",
-        "\n",
-        "# Save the trained model properly\n",
-        "with open(\"/content/drive/MyDrive/Whispers of Motherhood/postpartum_health_model.pkl\", \"wb\") as f:\n",
-        "    pickle.dump(model, f)\n",
-        "\n",
-        "print(\"✅ Model trained and saved successfully!\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "i7OK7DwhQfAZ",
-        "outputId": "72c1a73f-f5c1-4937-f409-2f46018b7e52"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Model trained and saved successfully!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "q5s_b-JJQfrr"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
